--- a/MyShop/wwwroot/LogIn.html
+++ b/MyShop/wwwroot/LogIn.html
@@ -13,7 +13,7 @@
         <br />
         <input placeholder="סיסמה" type="password" id="passwordLogin" />
         <br />
-        <button id="logIn" onclick="Login()">כניסה</button>
+        <button id="logIn" onclick="login()">כניסה</button>
         <br />
         <br />
     </div>
