--- a/MyShop/wwwroot/Update.html
+++ b/MyShop/wwwroot/Update.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>update</title>
+    <title>Update Details</title>
     <script src="Update.js" defer></script>
     <link href="Style.css" rel="stylesheet" />
 </head>
 <body>
     <h1 id="updateH1">עדכון פרטים:</h1>
-    <div>
+    <div class="updateDiv">
         <input id="userNameUpdate" type="email" placeholder="שם משתמש" />
         <br />
         <input id="passwordUpdate" type="password" placeholder="סיסמה" onblur="checkPassword()" />
@@ -20,9 +20,6 @@
         <input id="lastNameUpdate" type="text" placeholder="שם משפחה" />
         <br />
         <button id="signUpUpdate" onclick="updateUser()">עדכון</button>
-
-        <br />
-
     </div>
 </body>
 </html>
