add JWT token to project

--- a/MyShop/wwwroot/Products.html
+++ b/MyShop/wwwroot/Products.html
@@ -63,6 +63,7 @@
             <div class="Checkout ">
                 <a class="goToCart" href="ShoppingBag.html">לקופה</a>
             </div>
+            <button onclick="logout()" style="float:left;margin:10px;">התנתק</button>
 
 
         </div>
