--- a/MyShop/wwwroot/ShoppingBag.html
+++ b/MyShop/wwwroot/ShoppingBag.html
@@ -15,6 +15,7 @@
     </template>
 </head>
 <body>
+    <button onclick="logout()" style="float:left;margin:10px;">התנתק</button>
     <div class="cart">
         <div id="title">
             <h1> סל קניות </h1>
